--- a/css/form.css
+++ b/css/form.css
@@ -22,6 +22,7 @@ h6 {font-size: 12px}
 .navbar {
   background-color: #D9E0D0;
   border-bottom: none;
+  z-index: 1;
 }
 
 .navbar-static-top {
@@ -117,15 +118,21 @@ h6 {font-size: 12px}
   text-decoration: underline;
 }
 
+.inside {
+  border: 1px solid #D9E0D0;
+  border-radius: 10px;
+}
+
 .form-signup {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
 .form-signup-heading {
-  font-family: 'Bold', Arial, sans-serif;
-  font-size: 38px;
-  color: #fff;
+  font-family: 'Roboto Slab', Arial, sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  color: #A3B1A7;
   text-transform: lowercase;
   text-align: center;
 }
@@ -192,3 +199,15 @@ h6 {font-size: 12px}
 .footer a {
   color: #65B300;
 }
+
+.example {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.example .row {
+  margin-bottom: 40px;
+}
+
+
+
