--- a/css/legal-reader.css
+++ b/css/legal-reader.css
@@ -196,6 +196,6 @@
 
 /* LEGAL POINTS */
 .legal-point a:link {color: #90b310;}
-.legal-point a:hover {color: #A1C820;}
-.legal-point a:visited {color: #660066;}
-.legal-point a:active {color: #424242;}
+.legal-point a:hover {color: #660066;}
+.legal-point a:visited {color: #90b310;}
+.legal-point a:active {color: #660066;}
