--- a/css/form.css
+++ b/css/form.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
+/*@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);*/
 
 body {
   background-color: #fff !important;
