--- a/css/form.css
+++ b/css/form.css
@@ -254,8 +254,8 @@ h6 {font-size: 12px}
 }
 @media (min-width: 768px) {
   .sidebar {
-    position: relative;
-    top: 0px;
+    position: fixed;
+    top: 100px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -309,6 +309,15 @@ h6 {font-size: 12px}
   color: #65B300;
 }
 
+.main h3 {
+  margin-bottom: 30px;
+}
 
+.main p {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 30px
+}
 
 
